# token-transfer-analytics

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.airflow  Dockerfile.consumer  Dockerfile.producer  README.md  docker-compose.airflow.yml  docker-compose.kafka.yml  docker-compose.postgres.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  pr_ci.yml
airflow/: requirements.txt
airflow/dags/: collect_load_logs.py  collect_logs.py  dbt_sf.py  hello.py  load_logs_sf.py  orchestrate_load_and_dbt.py
chat_engine/: agents.py  chat_engine.py  chat_example.py  mint_semantic_model_2.yaml  prompts.py  tools.py
chat_engine/agents/: chart_generator.py  cortex_analyst.py  executor.py  planner.py  researcher.py  synthesizer.py
dbt_project/: .sqlfluff  .sqlfluffignore  dbt_project.yml  profiles.yml
dbt_project/macros/: cross_db_helpers.sql
dbt_project/models/: debug_conversion.sql
dbt_project/models/01_staging/: models.yml  sources.yml  stg_event_signature.sql  stg_open_logs.sql  stg_stablecoin.sql  stg_transfer.sql
dbt_project/models/02_intermediate/: int_all_transfer.sql  int_event.sql  models.yml
dbt_project/models/03_mart/: dim_event.sql  dim_stablecoin.sql  fct_burn.sql  fct_mint.sql  fct_transfer.sql  models.yml
dbt_project/snapshots/: snap_stablecoin.sql.bak
dbt_project/tests/: test_block_number_range.sql
docs/: index.md
docs/01_data_pipeline/: batch_layer.md  source.md  speed_layer.md
notebook/: eda.ipynb
scripts/: extract_graphql.py  load_file.py  setup_airflow_postgres_connection.sh  setup_airflow_snowflake_connection.sh
scripts/kafka/: consume_batch.py  consumer.py
scripts/knowledge/: doc_processor.py  embed_and_load_qdrant.py  run_embed_and_load_qdrant.py  run_process_doc.py  vector_search.py
scripts/raw_data/: README.md  collect_logs_data.py  collect_logs_incremental.py  get_events.py
scripts/utils/: database_client.py  stables_transfers.graphql
tests/: test_connection.py
